<resources>
    <string name="app_name">SpyGlass</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="info">Info</string>
    <string name="first_name">First name: %1$s</string>
    <string name="last_name">Last name: %1$s</string>
    <string name="role">Role: %1$s</string>
    <string name="e_mail">Email: %1$s</string>
    <string name="specialization">Specialization: %1$s</string>
    <string name="profile_info">Profile info</string>
    <string name="stats">Statistics</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="password_invalid">Password must have at least 6 characters.</string>
    <string name="email_invalid">Email is invalid.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_no_match">The password and confirmation password do not match.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm">Confirm</string>
    <string name="receipt">Receipt</string>
    <string name="offer">Offer</string>
    <string name="internal_document">Internal</string>
    <string name="document_type_dialog_title">Your desired document type:</string>
    <string name="history_empty">Your history is empty.</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">Channel used to get notifications</string>
    <string name="stats_empty">Users not found!</string>
    <string name="archived">Archived</string>
    <string name="revised">Revised</string>
    <string name="signed">Signed</string>
    <string name="scanned_properly">Scanned properly</string>
    <string name="scanned_improperly">Scanned improperly</string>
    <string name="valid_percentage">Properly scanned percentage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_switch_personal">Personal Documents</string>
    <string name="history_switch_reviser">Documents to Revise</string>
    <string name="history_switch_accountant">Documents to Archive</string>
    <string name="history_switch_director">Documents to Sign</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="total_format">Total:</string>
    <string name="revise_button">REVISE</string>
    <string name="sign_button">SIGN</string>
    <string name="archive_button">ARCHIVE</string>
    <string name="send_to_sign_button">SEND TO SIGN</string>
    <string name="first_name_last_name">%1$s %2$s</string>
    <string name="scanned_properly_number">Scanned properly: %1$d</string>
    <string name="scanned_improperly_number">Scanned improperly: %1$d</string>
    <string name="properly_scanned_percentage">Properly scanned percentage: %1$s%%</string>
    <string name="revised_number">Revised: %1$d</string>
    <string name="archived_number">Archived: %1$d</string>
    <string name="signed_number">Signed: %1$d</string>
    <string name="logo_description">SpyGlass Logo</string>
    <string name="logout_button_description">Logout Button</string>
</resources>
