<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.AuthenticationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_spyglass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/app_name"
            android:textColor="@color/spyglass_blue"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/spyglass_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="end"
            app:constraint_referenced_ids="title"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/login_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/please_login_to_continue"
            android:textColor="@color/spyglass_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            style="@style/TextInputLayoutStyleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            style="@style/TextInputLayoutStyleLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field"
            app:layout_constraintVertical_bias="1.0"
            app:layout_goneMarginBottom="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="32dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/spyglass_gold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>