<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.AuthenticationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:text="@string/register"
            android:textColor="@color/spyglass_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_field"
            style="@style/TextInputLayoutStyleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_field"
            style="@style/TextInputLayoutStyleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/role_menu"
            style="@style/TextInputLayoutMenuRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            app:endIconTint="@color/spyglass_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_field">

            <AutoCompleteTextView
                android:id="@+id/role_menu_tv"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginBottom="20dp"
                android:inputType="none"
                tools:ignore="LabelFor"
                tools:text="Director" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            style="@style/TextInputLayoutStyleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/role_menu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            style="@style/TextInputLayoutStyleLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_confirm_field"
            style="@style/TextInputLayoutStyleLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:hint="@string/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirm_text"
                style="@style/TextInputEditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="32dp"
            android:enabled="false"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm_field"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/register_progress"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/spyglass_gold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>