<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/spyglass_gold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginBottom="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/document_signature" />

            <TextView
                android:id="@+id/scanned_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/document_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/spyglass_blue"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="R123456789" />

            <TextView
                android:id="@+id/client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/document_signature"
                tools:text="Max Verstappen " />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toTopOf="@id/items"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/client_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/total_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:listitem="@layout/layout_receipt_item" />

            <TextView
                android:id="@+id/total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/total_format"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/items" />

            <TextView
                android:id="@+id/total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/success_green"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/total_label"
                app:layout_constraintStart_toEndOf="@+id/total_label"
                app:layout_constraintTop_toTopOf="@+id/total_label"
                tools:text="200" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/divider_buttons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/grey"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        style="@style/StyleButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textColor="@color/success_green"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_discard"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/success_green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_discard"
        style="@style/StyleButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/discard"
        android:textColor="@color/error_red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_save"
        app:strokeColor="@color/error_red" />

</androidx.constraintlayout.widget.ConstraintLayout>
